--- a/biblio.bib
+++ b/biblio.bib
@@ -102,6 +102,24 @@ url="http://dx.doi.org/10.1023/A:1010933404324"
   year = 1998
 }
 
+@article{friedman-gradientBoosting2001,
+author = "Friedman, Jerome H.",
+doi = "10.1214/aos/1013203451",
+fjournal = "The Annals of Statistics",
+journal = "Ann. Statist.",
+month = "10",
+number = "5",
+pages = "1189--1232",
+publisher = "The Institute of Mathematical Statistics",
+title = "Greedy function approximation: A gradient boosting
+       machine.",
+url = "http://dx.doi.org/10.1214/aos/1013203451",
+volume = "29",
+year = "2001"
+}
+
+
+
 
 @book{Mitchell-MLearning,
   title = {{Machine Learning}},
