add todos for bibl

--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -574,6 +574,8 @@ A drawback of this loss though, is that it is not robust to outliers or to noisy
 
 \subsection{Gradient Tree Boosting}
 
+\todo{Add reference to friedman paper in "friedman-gradientBoosting2001"}
+
 As explained before, the boosting method builds a high model learned from other \textit{weaker} learners. In the case of \textit{gradient tree boosting}, decision trees serve as base learners. If $Tr$ is a set of tree models and $K$ the number of trees in $Tr$, then trees will be the parameters for this model and at step $m$ the output will be
 
 \begin{equation}
