--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -628,4 +628,52 @@ As a counter example, another algorithm was run on the same problem as \cref{fg:
 \end{figure}
 
 
-\todo{add positive ROC concrete example on one of the problems}
+
+We experimented with this metric with a Logistic Classifier over different hyperparameter settings.
+To do this, we set up to find users that lived in endemic regions in the past, namely \cref{target1}, yet excluding certain features which are correlated with the target variable: the current user\'s endemicity and the state in which this user is living.
+For this experiment we set the ``ROC AUC'' metric to compare the $l1$ vs. the $l2$ regularization of the model on more than a hundred values for the regularization parameter $C$.
+For each regularization type, we set a value for $C$ that ranged from $\exp^{-2}$ to $\exp^{5}$ and then a cross validation routine was done on an 8- folded, training set.
+\cref{tab:roc_auc_logreg_target1_results} shows a summary of results.
+In these, our experiments resulted in higher values for $l1$ regularized models.
+This gap is even widened when comparing test scores for both and the same happens to the time taken to fit the cross validation algorithm for all of the $C$ values.
+
+
+\begin{table}[ht]
+\caption{Table of results comparing an 8 fold cross validation fit for a Logistic Classifier with varying regularization $C$ values . The metric for this experiment was the ``ROC AUC''.}
+\label{tab:roc_auc_logreg_target1_results}
+\centering
+\begin{tabular}{ l l l l l }
+%{|p{2cm}|p{2cm}|p{1.5cm}|p{1cm}|p{1.5cm}}
+\toprule
+Regularization type & Best CV $C$ value & Mean CV score & Test score & Full CV time (s)  \\
+\midrule
+$l2$ & 1e-5 & 0.805 & 0.744 & 17579.7  \\
+$l1$ & 1e-5 & 0.81 & 0.76 & 15892.9 \\
+
+\bottomrule
+\end{tabular}
+\end{table}
+
+
+Another interesting result is that in both experiments, the best CV scores were achieved for highly regularized models.
+To further explore this, we looked at their CV mean scores for each hyperparameter setting. \cref{fig:rocauc_logreg_cv_regularized_l1} and \cref{fig:rocauc_logreg_cv_regularized_l2} show the series comparison.
+ From this it is clear that both models improve the more regularized they become.
+ The full extent to which this regularization would keep improving the score is not explored because both experiments' $C$ parameter had a minimum at $10^{-5}$ which corresponds to the highest score for both.
+ Also, there is a difference in the stability of the fitting, where the scores are more noisy for the $l2$ regularization at high $C$ values.
+ On the other hand, the $l1$ regularization has a more stable performance across $C$.
+ This can be an indication that the $l1$ experiment required less iterations to fit and find an optimum.
+
+
+\begin{figure}
+\centering
+\begin{minipage}{.5\textwidth}
+%  \centering
+  \includegraphics[width=.8\linewidth]{figures/cross_validation/logreg_cv_regularization_l1_rocauc_series}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+%  \centering
+  \includegraphics[width=.8\linewidth]{figures/cross_validation/logreg_cv_regularization_l2_rocauc_series}
+  \end{minipage}
+\caption{Series of CV mean average scores for the ``ROC AUC'' metric where the $l1$ regularization strength of the logistic classifier was tested, measured in $C$.}
+\label{fig:rocauc_logreg_cv_regularized_comparison}
+\end{figure}
