add todo of figures not appearing in their own section

--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -594,7 +594,7 @@ No other information from $\mathcal{Ts}$ was used during the whole process.
 In \cref{tab:metrics_comparison_logreg_target1_results} we show a summary of results.
 
 
-\begin{table}[ht]
+\begin{table}[!htb]
 \caption{ Results comparing an 8-fold CV fit of a Logistic Classifier over varying regularization $C$ values. Four metrics were cross-validated and compared in this experiment: $Accuracy$, $Precision$, $Recall$ and $F1$.}
 \label{tab:metrics_comparison_logreg_target1_results}
 \centering
@@ -670,7 +670,7 @@ In these, our experiments resulted in higher values for $l1$ regularized models.
 This gap is even widened when comparing test scores for both and the same happens to the time taken to fit the cross validation algorithm for all of the $C$ values.
 
 
-\begin{table}[ht]
+\begin{table}[!htb]
 \caption{Table of results comparing an 8 fold cross validation fit for a Logistic Classifier with varying regularization $C$ values. The metric for this experiment was the ``ROC AUC''.}
 \label{tab:roc_auc_logreg_target1_results}
 \centering
