--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -579,8 +579,6 @@ Some of the most used metrics include the following:
 \end{itemize}
 
 
-\todo{show an instance of problem comparing all metrics}
-
 To illustrate the difference in these metrics we ran an experiment on \cref{target2}.
 We took one logistic classifier with common settings and we ran a cross validation procedure over values of the regularization strength $C$.
 % This problem should certainly be more difficult than \cref{target1} due to the stronger class imbalance.
@@ -611,7 +609,15 @@ $F1$ & 0.0015 & 0.339 & 0.340 & 4612.1 \\
 \end{tabular*}
 \end{table}
 
+From these results it is clear that there are no significant time differences in chosing one metric over another.
+Also, all metrics favor stronger regularized modles, except for the $Accuracy$ metric which favored a very loosely regularized model in the CV procedure.
+The biggest difference between the test and average CV scores among all models was of 4\% yet still the algorithm has trouble finding samples of the positive class.
+This is evidenced in the extremely low value for the $Precision$ scores where only a handful of positie classes can be correctly captured by the model.
+The effect of the low precision is also evident in the $F1$ score which drags this metric down, even when the recall is has an acceptable rate of 0.65.
+In practice, the experimenter would chose the metric which would be most appropriate for the task at hand.
+This is because the quality of solutions vary in the way they are evaluated and this evaluation will depend on the task.
 
+\todo{show an instance of problem comparing all metrics}
 
 \subsection{ROC Curve}
 
