add major & solve minor hangouts TODOs

--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -432,6 +432,8 @@ Also, the correlation between $I(h(\textbf{x}, \Theta) = \textbf{y})$ and \ $I(h
 
  \todo{do run on a problem and compare to results solely with decision trees}
 
+\todo{add figures of the validation curve comparing max depth of the tree vs the score (in a CV procedure) and the number of trees }
+
 \subsection{Other Notes on Random Forests}
 One benefit of building Random Forest classifiers is that the algorithm easily increases the prediction error of a group of estimators by randomly building each of these in a way that decreases the variance of the overall model whilst trading a small loss in bias. The model is also robust to the introduction of a number of noisy features. If the ratio of informative to non-informative features is not extreme, selecting $m$ features at random at each split will mean that in most cases, splits will be made on those informative features. Note that in any given tree, the probability of drawing at least one informative feature in a split is still very high. This is because it follows a hyper geometric distribution $\mathcal{H}(P,j,l)$ with $l$ draws from a total population of $P$ features and only $j$ informative ones.
 
