--- a/preamble.tex
+++ b/preamble.tex
@@ -319,8 +319,8 @@ pdfkeywords={machine learning}
       \vspace{0.3\textheight}
       \rule{\textwidth}{1.5pt}\par
       \vspace{\baselineskip}
- {\bfseries\Huge{Explorando migraciones chagásicas en latinoamérica con aprendizaje automático}\par
- 	\bigskip\Large{Exploring Latino American chagasic migrations with machine learning}}\\
+ {\bfseries\Huge{Exploring Latinoamerican chagasic migrations with machine learning }\par
+ 	\bigskip\Large{Explorando migraciones chagásicas en latinoamérica con aprendizaje automático}}\\
       \vspace{\baselineskip}
       \rule{\textwidth}{1.5pt}\par
       \vfill
