--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -615,9 +615,8 @@ The biggest difference between the test and average CV scores among all models w
 This is evidenced in the extremely low value for the $Precision$ scores where only a handful of positie classes can be correctly captured by the model.
 The effect of the low precision is also evident in the $F1$ score which drags this metric down, even when the recall is has an acceptable rate of 0.65.
 In practice, the experimenter would chose the metric which would be most appropriate for the task at hand.
-This is because the quality of solutions vary in the way they are evaluated and this evaluation will depend on the task.
+Then, the quality of solutions vary in the way they are evaluated and this evaluation will depend on the task.
 
-\todo{show an instance of problem comparing all metrics}
 
 \subsection{ROC Curve}
 
