add reference to decision tree overfitting

--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -266,7 +266,7 @@ With this, the different model errors produces the following figure. Where the t
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=0.7\columnwidth]{figures/figure-biasVariance/dtree_overfit_problem_2.png}
-\caption{ Training and cross-validated mean score along the change in max tree depth. One model is fit for each tree depth value on both the training and cross validation sets. Then their scores are compared in the seires with the CV series showing a shaded standard deviation band.
+\caption{ Training and cross-validated mean score along the change in max tree depth. One model is fit for each tree depth value on both the training and cross validation sets. Then their series of scores are compared side by side, showing a shaded standard deviation band for the CV folds.
 }
 \label{figure:dtree_overfit_problem_2}
 \end{center}
