set biber as backend to biblatex

--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -92,7 +92,7 @@ Even though governmental programs have been ongoing for years now~\textcite{plan
 \end{figure}
 
 In 2004, the joint work of \textit{Instituto Nacional de Cardiología ``Ignacio Chávez''} and  \textit{Instituto de Biología de la UNAM} resulted in a Chagas disease database for Mexico~\textcite{cruz2006chagmex}. Reviewing positive serology in blood banks and human reported cases per state, an epidemic risk map description was produced to geographically situate the disease. Based on this data, we defined the Mexican epidemic area, selecting the states having the top 25\% prevalence rates nationwide. The resulting risk region is shown in Figure~\cref{fig:endemic_zone_mexico}. It covers most of the South region of the country and includes the states of Jalisco, Oaxaca, Veracruz, Guerrero, Morelos, Puebla, Hidalgo and Tabasco.
-This region is considered as the endemic zone $E_Z$ for the Mexican case in the analysis described in~\cref{cha:descr-risk} and \cref{cha:evaluation-results}.
+This region is considered as the endemic zone $E_Z$ for the Mexican case in the analysis described in~\cref{cha:descr-risk} and \cref{cha:results_conclusion}.
 
 
 
