--- a/preamble.tex
+++ b/preamble.tex
@@ -164,8 +164,7 @@ height=21cm,top=3.7cm,headsep=1cm,footskip=1.1cm]{geometry}
 
 % this might insert blank pages here and there but now compilation works correctly with biber
 \usepackage[style=american]{csquotes}  % Language sensitive quotation facilities
-\usepackage[style=authoryear-comp,backref=true,refsection=chapter,
-backend=biber]{biblatex}
+\usepackage[style=authoryear-comp,backref=true,refsection=chapter,backend=biber]{biblatex}
 
 % \usepackage[
 % 	backend=biber,
